# SNN

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  configure.sh
backend/: Backend.cpp  Backend.h  BackendFactory.cpp  BackendFactory.h  CMakeLists.txt  NodeFactory.cpp  NodeFactory.h
backend/cpu/: CMakeLists.txt  CPUBackend.cpp  CPUBackend.h
backend/cpu/core/: CPURuntime.cpp  CPURuntime.h
backend/opencl/: CMakeLists.txt
backend/opencl/core/: BufferConvertor.cpp  BufferConvertor.h  ImageBufferConverter.cpp  ImageBufferConverter.h  OpenCLBackend.cpp  OpenCLBackend.h  OpenCLSetting.h
backend/opencl/core/runtime/: OpenCLRuntime.cpp  OpenCLRuntime.h
backend/opencl/execution/buffer/: ConvBaseBufExecution.cpp  ConvBaseBufExecution.h  ConvBufExecution.cpp  ConvBufExecution.h  RasterBufExecution.cpp  RasterBufExecution.h
backend/opencl/execution/cl/: binary.cl  buffer_convert_buf.cl  buffer_to_image.cl  concat.cl  conv_2d.cl  conv_2d_buf.cl  copy_buffer_to_image2d.cl  deconv_2d.cl  depthwise_conv2d.cl  interp.cl  nearest.cl  optimization.cl  pooling.cl  postprocess.cl  transpose.cl
backend/opencl/execution/image/: AddExecution.cpp  AddExecution.h  AddN.cpp  AddN.h  AddNExecution.cpp  AddNExecution.h  ConcatExecution.cpp  ConcatExecution.h  ConvBaseExecution.cpp  ConvBaseExecution.h  ConvExecution.cpp  ConvExecution.h  DeconvExecution.cpp  DeconvExecution.h  DepthwiseConvExecution.cpp  DepthwiseConvExecution.h  DoubleConvExecution.cpp  DoubleConvExecution.h  EltwiseExecution.cpp  EltwiseExecution.h  Execution.cpp  Execution.h  InputExecution.cpp  InputExecution.h  InterpExecution.cpp  InterpExecution.h  PoolExecution.cpp  PoolExecution.h  PostProcessExecution.cpp  PostProcessExecution.h  SeperableConvExecution.cpp  SeperableConvExecution.h  StemExecution.cpp  StemExecution.h
backend/opencl/utils/: cmd_arg_reader.cpp  cmd_arg_reader.h  coreUtils.cpp  coreUtils.h  exception.h  oclUtils.cpp  oclUtils.h  shrUtils.cpp  shrUtils.h
core/: BaseProctocol.h  CMakeLists.txt  ConvolutionCommon.cpp  ConvolutionCommon.h  Interpreter.cpp  Interpreter.h  Model.cpp  Model.h  NonCopyable.h  Pipeline.cpp  Pipeline.h  PostProcessor.cpp  PostProcessor.h  Tensor.cpp  TensorUtils.cpp  TensorUtils.h
include/SNN/: HalideRuntime.h  SNNDefine.h  Tensor.h  TypeGenerated.h  api_types.h  common.h  macro.h  op_data.h
misc/: CMakeLists.txt  nms.cpp  nms.h  utils.cpp  utils.h
test/: backbone.py  convert.py  model.py
tools/: Makefile  clCompile.c  converter  gen.sh  inference.cpp
